# crane

./: .gitignore  CMakeLists.txt
include/: crane.hpp
include/crane/: geom.hpp  geom_fwd.hpp  math.hpp
include/crane/geom/: kernel.hpp  kernel_fwd.hpp  shapes.hpp  shapes_fwd.hpp
include/crane/meta/: concepts.hpp  macros.hpp  tmp.hpp
include/crane/numbers/: limits.hpp  math.hpp
src/: main.cpp
src/crane/: numeric_types.hpp
src/crane/geom/: _fwd.hpp
src/crane/geom/kernel/: Angle.cpp  Angle.hpp  Direction_2.cpp  Direction_2.hpp  Direction_3.cpp  Direction_3.hpp  Euler.cpp  Euler.hpp  Matrix_2.hpp  Matrix_Impl.hpp  Point_2.cpp  Point_2.hpp  Point_3.cpp  Point_3.hpp  Vec.hpp  Vec.tpp  Vector_2.cpp  Vector_2.hpp  Vector_3.cpp  Vector_3.hpp  Vector_Impl.cpp  Vector_Impl.hpp  Vector_Impl.tpp
src/crane/geom/raylib/: vectors.cpp  vectors.hpp
src/crane/geom/shapes/: Bounding_Box_2.cpp  Bounding_Box_2.hpp  Circle.cpp  Circle.hpp  Triangle_2.cpp  Triangle_2.hpp  Triangle_3.cpp  Triangle_3.hpp
src/crane/math/: operations.hpp  operations.tpp
src/crane/meta/: concepts.hpp  macros.hpp
src/crane/meta/v1/: associative_packs.hpp  associative_packs.tests.cpp  booleans.hpp  booleans.tests.cpp  checks.hpp  checks.tests.cpp  conditionals.hpp  conditionals.tests.cpp  conversions.hpp  errors.hpp  errors.tests.cpp  functions.hpp  integers.hpp  integers.tests.cpp  nested_packs.hpp  nested_packs.tests.cpp  packs.hpp  packs.tests.cpp  parameters.hpp  predicates.hpp  returns.hpp  returns.tests.cpp  tuples.hpp  tuples.tests.cpp  values.hpp  values.tests.cpp
src/crane/numbers/: limits.hpp  math.hpp
src/crane/viz/: Scene.hpp  Visualizer.cpp  cameras.cpp  cameras.hpp
tools/cmake/: utils.cmake
